--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Challenge",
   "main": "Index.js",
   "scripts": {
-    "test": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "test": "jest --config=jest.config.json"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/tj9027/pixabay-color-search#readme",
   "dependencies": {
+    "enzyme-to-json": "^3.3.4",
     "mini-css-extract-plugin": "^0.4.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
@@ -26,14 +28,20 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.1.5",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
+    "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.1.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
